--- a/2/index.css
+++ b/2/index.css
@@ -5,16 +5,25 @@
   box-sizing: border-box;
 }
 
-div.wrapper 
-  background: pink;
-  padding: 20px;
-  text-align: center;
-  border: 2px solid grey;
+div.wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 402px;
+  height: 402px;
+  margin: auto;
+  border: 1px solid black;
+}
 
+.chess__cell {
+  width: 50px;
+  height: 50px;
+}
 
-span#content {
-  background: green;
-  padding: 10px
-  color: #fff
-  fontSize: 40px;
+.chess__cell--black {
+  background: black;
 }
